--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/Allan-Nava/KafkaJS-WS#readme",
   "dependencies": {
     "kafkajs": "^2.2.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "typescript": "^4.8.4"
   }
 }
