--- a/package.json
+++ b/package.json
@@ -47,5 +47,20 @@
     "kafkajs": "^2.2.0",
     "socket.io": "^4.5.2",
     "typescript": "^4.8.4"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
+    "tsd": "^0.21.0"
+  },
+  "contributors": [
+    {
+      "name": "Allan Nava",
+      "email": "allannava95@gmail.com"
+    },
+    {
+      "name": "Antonio Borgese",
+      "email": "antonio.borgese@hiway.media"
+    }
+  ]
 }
