--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "npm run format:check && npm run compile && npm run test:types && npm run test:unit",
     "test:types": "tsd",
     "test:unit": "nyc mocha --require ts-node/register --reporter spec --slow 200 --bail --timeout 10000 test/index.ts",
-    "format:check": "prettier --check \"lib/**/*.ts\" \"test/**/*.ts\"",
-    "format:fix": "prettier --write \"lib/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"lib/**/*.ts\" ",
+    "format:fix": "prettier --write \"lib/**/*.ts\" ",
     "prepack": "npm run compile"
   },
   "files": [
