--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "rimraf": "^3.0.2",
     "tsd": "^0.21.0"
   },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
+  },
   "contributors": [
     {
       "name": "Allan Nava",
