--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 //registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
 registry=https://registry.npmjs.org/
 always-auth=true
