--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -76,7 +76,7 @@ nav_sort: case_insensitive # default, equivalent to nil
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2017-2021 getEVO. Distributed by Github <a href=\"https://github.com/Allan-Nava/KafkaJS-WS/blob/master/LICENSE.md>MIT license.</a>"
+footer_content: "Copyright &copy; 2017-2022 KafkaJS WS. Distributed by Github <a href=\"https://github.com/Allan-Nava/KafkaJS-WS/blob/master/LICENSE.md>MIT license.</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
