--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "contributors": [
     {
       "name": "Allan Nava",
-      "email": "allannava95@gmail.com"
+      "email": "allan.nava@hiway.media"
     },
     {
       "name": "Antonio Borgese",
