--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "kafkajs-ws",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "description": "KafkaJS TS - node.js realtime framework server",
-  "main": "./dist/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "compile": "rimraf ./dist && tsc",
     "test": "npm run format:check && npm run compile && npm run test:types && npm run test:unit",
@@ -11,18 +15,6 @@
     "format:check": "prettier --check \"lib/**/*.ts\" ",
     "format:fix": "prettier --write \"lib/**/*.ts\" ",
     "prepack": "npm run compile"
-  },
-  "files": [
-    "dist/",
-    "client-dist/",
-    "wrapper.mjs",
-    "!**/*.tsbuildinfo"
-  ],
-  "directories": {
-    "doc": "docs/",
-    "example": "example/",
-    "lib": "lib/",
-    "test": "test/"
   },
   "repository": {
     "type": "git",
